# Tetris

./: .gitmodules  README.md  package.json
engine/: CMakeLists.txt
engine/include/core/: attack.hpp  board.hpp  config.hpp  engine.hpp  input_mapper.hpp  piece.hpp  rules.hpp  session.hpp  snapshot.hpp  srs.hpp  state.hpp  types.hpp
engine/include/network/: net_game_driver.hpp  network_manager.hpp  protocol.hpp
engine/include/tetris/core/: attack.hpp  board.hpp  config.hpp  engine.hpp  piece.hpp  rules.hpp  session.hpp  snapshot.hpp  srs.hpp  state.hpp  types.hpp
engine/include/tetris/input/: input_mapper.hpp
engine/include/tetris/net/: net_game_driver.hpp  network_manager.hpp  protocol.hpp
engine/include/tetris/ui/: terminal_renderer.hpp
engine/include/ui/: terminal_renderer.hpp
engine/src/: main.cpp  wasm_binding.cpp
engine/tests/: CMakeLists.txt
scripts/: build_native.js  build_wasm.js
webui/: package-lock.json  package.json  vite.config.js
webui/src/: main.ts  style.css
webui/src/fx/: line_fx.ts
webui/src/game/: actions.ts
webui/src/input/: keyboard.ts
webui/src/render/: board.ts  colors.ts  preview.ts
